<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />


    <ScrollView
        android:id="@+id/scrollViewmovie_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:overScrollMode="never"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.fauza.zmdb.activity.MovieDetailActivity">


            <ImageView
                android:id="@+id/imageView_backdrop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:alpha="0.4"
                android:contentDescription="@string/imageViewBackDrop"
                android:scaleType="fitCenter"
                android:src="@drawable/backdropplaceholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imageViewPoster"
                android:scaleType="fitCenter"
                android:src="@drawable/posterplaceholder"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_backdrop"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="TITLE TITLE MOVIE MOVIE DUH DUH" />

                <ImageView
                    android:id="@+id/imageView_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/imageViewRating"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_movie_title"
                    app:srcCompat="@drawable/ic_rating" />

                <TextView
                    android:id="@+id/textView_rating_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_rating"
                    app:layout_constraintTop_toBottomOf="@+id/textView_movie_title"
                    tools:text="RATING/10" />

                <TextView
                    android:id="@+id/textView_vote_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toEndOf="@+id/imageView_rating"
                    app:layout_constraintTop_toBottomOf="@+id/textView_rating_average"
                    tools:text="3000" />

                <TextView
                    android:id="@+id/textView_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_vote_count"
                    tools:text="GENRES" />

                <ImageView
                    android:id="@+id/imageButton_favorite_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:contentDescription="@string/imageViewFavourite"
                    android:src="@drawable/ic_favourite_no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/relativeLayout_play_trailer"
                    app:layout_constraintTop_toBottomOf="@+id/textView_genres" />

                <ImageView
                    android:id="@+id/imageButton_favorite_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:contentDescription="@string/imageViewFavourite"
                    android:src="@drawable/ic_favourite_yes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/relativeLayout_play_trailer"
                    app:layout_constraintTop_toBottomOf="@+id/textView_genres" />


                <RelativeLayout
                    android:id="@+id/relativeLayout_play_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_genres">

                    <ImageView
                        android:id="@+id/imageView_play_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/imageViewPlayButton"
                        app:srcCompat="@drawable/ic_play" />

                    <TextView
                        android:id="@+id/textView_play_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/imageView_play_icon"
                        android:text="@string/play_trailer"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </RelativeLayout>

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/texView_overview_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDarkSecondary"
                android:paddingBottom="5dp"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/overview_label"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_backdrop" />

            <TextView
                android:id="@+id/textView_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDarkSecondary"
                android:paddingBottom="10dp"
                android:paddingEnd="0dp"
                android:paddingStart="14dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/texView_overview_label"
                tools:text="Overview of a film goes here ..." />

            <TextView
                android:id="@+id/textView_review_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDarkSecondary"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/reviews"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_overview" />

            <ProgressBar
                android:id="@+id/progressbarReviewContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_review_content" />

            <TextView
                android:id="@+id/textView_review_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDarkSecondary"
                android:paddingBottom="20dp"
                android:paddingEnd="0dp"
                android:paddingStart="14dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_review_label"
                tools:text="This film is so great haha" />

            <TextView
                android:id="@+id/textView_more_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDarkSecondary"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="10dp"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/more_reviews"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_review_content" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
